init deploy to gh-pages.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/eexar-test/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EEXAR Test</title>
+    <script type="module" crossorigin src="/eexar-test/assets/index.e942e3ad.js"></script>
+    <link rel="modulepreload" href="/eexar-test/assets/vendor.d84ea1ce.js">
+    <link rel="stylesheet" href="/eexar-test/assets/index.f792605a.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    
   </body>
 </html>
